# klubbrekorder

./: .gitignore  compare.py  db.py  indoor.html  main.py  outdoor.html  parse_website.py  pyproject.toml  scrape.py
klubbrekorder/: compare.py  db.py  main.py  normalize.py  parse_website.py
tests/: test_compare.py  test_normalize.py  test_parse_website.py
